force-app/main/default/objects/Pesquisa_Questao__c/Pesquisa_Questao__c.object-meta.xml
<CustomObject>
    <label>Pesquisa Questão</label>
    <nameField>
        <label>Nome de Pesquisa Questão</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pesquisa Questões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>