force-app/main/default/objects/Pesquisa_Questao__c/fields/Condicao__c.field-meta.xml
<CustomField>
    <fullName>Condicao__c</fullName>
    <label>Condição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>