force-app/main/default/objects/Pesquisa_Questao__c/fields/Condicao_Operador__c.field-meta.xml
<CustomField>
    <fullName>Condicao_Operador__c</fullName>
    <label>Condicão Operador</label>
    <length>20</length>
    <type>Text</type>
</CustomField>