force-app/main/default/objects/Pesquisa_Questao__c/fields/Condicao_Resposta__c.field-meta.xml
<CustomField>
    <fullName>Condicao_Resposta__c</fullName>
    <label>Condicão Resposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>