force-app/main/default/objects/Pesquisa_Questao__c/fields/Conteudo__c.field-meta.xml
<CustomField>
    <fullName>Conteudo__c</fullName>
    <label>Conteúdo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>